apps/base/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-svc
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
  - name: web
    port: 8123
    protocol: TCP
    targetPort: 8123
  type: ClusterIP
